Add window scaling, improve plotting and theory

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -160,7 +160,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -177,6 +177,8 @@
     "ymin = 1e-4\n",
     "ymax = 3e2\n",
     "degree = 0\n",
+    "verbose = False\n",
+    "\n",
     "if len(df_all.distance.unique()) > 1:\n",
     "    distance = 20\n",
     "    chosen_dict = {\n",
@@ -190,10 +192,6 @@
     "        \"degree\": degree, \n",
     "    }\n",
     "\n",
-    "#chosen_dict[\"motors\"] = \"all45000\"\n",
-    "#chosen_dict[\"mic_type\"] = \"measurement\"\n",
-    "#chosen_dict[\"mic_type\"] = \"audio_deck\"\n",
-    "\n",
     "df_filtered = filter_by_dicts(df_all, [chosen_dict])\n",
     "print(\"plotting\\n\", df_filtered.iloc[:, :8])\n",
     "\n",
@@ -205,11 +203,6 @@
     "if len(df_filtered.appendix.unique()) > 1:\n",
     "    filter_by_appendix = True\n",
     "\n",
-    "verbose = False\n",
-    "\n",
-    "fig_slice, ax_slice = plt.subplots()\n",
-    "fig_slice.set_size_inches(5, 5)\n",
-    "    \n",
     "for mic_type, df_mic_types in df_filtered.groupby(\"mic_type\"):\n",
     "    if mic_type == \"measurement\":\n",
     "        mic = 0\n",
@@ -220,8 +213,7 @@
     "        if (mic_type == \"measurement\") and (row.snr == 1):  # this is no \"real snr\"\n",
     "            continue\n",
     "\n",
-    "            \n",
-    "        label = title = \"\"\n",
+    "        label = \"\"\n",
     "        if filter_by_mic_type:\n",
     "            label += f\"{mic_type}, \"\n",
     "        if filter_by_motors:\n",
@@ -247,7 +239,9 @@
     "        \n",
     "        fig, ax = plt.subplots()\n",
     "        fig.set_size_inches(5, 5)\n",
-    "        im = ax.pcolorfast(row.seconds, freqs_masked, np.log10(spec_masked[:-1, :-1]))\n",
+    "        log_spec_masked = np.full(spec_masked.shape, np.nan)\n",
+    "        log_spec_masked[spec_masked>0] = np.log10(spec_masked[spec_masked>0])\n",
+    "        im = ax.pcolorfast(row.seconds, freqs_masked, log_spec_masked[:-1, :-1])\n",
     "        add_colorbar(fig, ax, im)\n",
     "        ax.scatter(row.seconds[1:], \n",
     "                   freqs_masked[index_matrix[0, :]][:-1], \n",
@@ -264,22 +258,8 @@
     "        ax.set_xlabel(\"time [s]\")\n",
     "        ax.set_ylabel(\"frequency [Hz]\")\n",
     "        ax.set_title(label)\n",
-    "        save_fig(\n",
-    "            fig, f\"plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_spec.png\"\n",
-    "        )\n",
-    "\n",
-    "        df_mic = wall_detector.df[wall_detector.df.mic == mic]\n",
-    "        \n",
-    "        stds = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(normalized_std).values\n",
-    "        #stds = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanstd).values\n",
-    "        medians = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanmedian).values\n",
-    "        stds = np.r_[[np.zeros(len(medians))], [2*stds]]\n",
-    "        ax_slice.errorbar(x=np.sort(df_mic.frequency.unique()), \n",
-    "                          y=medians, \n",
-    "                          yerr=stds, \n",
-    "                          label=label, marker='o', markersize=4.0, lw=2.0)\n",
-    "        #sns.scatterplot(\n",
-    "        #    data=df_mic, x=\"frequency\", y=\"magnitude\", hue=\"counter\", ax=ax, linewidth=0\n",
+    "        #save_fig(\n",
+    "        #    fig, f\"plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_spec.png\"\n",
     "        #)\n",
     "\n",
     "        fig_raw, ax = plot_raw_signals(spec_masked_all, freqs_masked, mic_idx=mic)\n",
@@ -287,25 +267,66 @@
     "        ax.set_title(label)\n",
     "        save_fig(\n",
     "            fig_raw, f\"plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_raw.png\"\n",
-    "        )\n",
-    "        \n",
-    "        normalized_stds = df_mic.groupby(\"frequency\", sort=True)[\"magnitude\"].apply(normalized_std).values\n",
-    "        frequencies = np.sort(df_mic.frequency.unique())\n",
-    "        fig_std, ax = plt.subplots()\n",
-    "        ax.plot(frequencies, normalized_stds, marker='o')\n",
-    "        ax.set_title(label)\n",
-    "        \n",
-    "ax_slice.set_ylabel('amplitude')\n",
-    "ax_slice.set_xlabel(\"frequency [Hz]\")\n",
-    "ax_slice.set_yscale(\"log\")\n",
-    "ax_slice.set_ylim(1e-1, 1e2)\n",
-    "ax_slice.grid(which=\"both\")\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#chosen_dict[\"motors\"] = \"all45000\"\n",
+    "chosen_dict[\"mic_type\"] = \"audio_deck\"\n",
+    "df_filtered = filter_by_dicts(df_all, [chosen_dict])\n",
     "\n",
-    "title = f'distance={row.distance}cm mic{mic}'\n",
-    "ax_slice.set_title(title)\n",
-    "ax_slice.legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
-    "#ax_slice.legend()\n",
-    "save_fig(fig_slice, f\"plots/{exp_name}{row.appendix}_slice.png\")"
+    "if mic_type == \"measurement\":\n",
+    "    mic = 0\n",
+    "else:\n",
+    "    mic = 1\n",
+    "\n",
+    "fig_slice, ax_slices = plt.subplots(len(df_filtered.appendix.unique()), 2, sharex=True, sharey=True)\n",
+    "fig_slice.set_size_inches(10, 10)\n",
+    "\n",
+    "for i, (appendix, df) in enumerate(df_filtered.groupby(\"appendix\", sort=True)):\n",
+    "    for j, (motors, df_row) in enumerate(df.groupby(\"motors\", sort=True)): \n",
+    "        assert len(df_row) == 1, df_row.iloc[:, :10]\n",
+    "        row = df_row.iloc[0]\n",
+    "        if i == 0:\n",
+    "            ax_slices[0, j].set_title(motors)\n",
+    "\n",
+    "        label = title = \"\"\n",
+    "        label += f\"{row.motors}\"\n",
+    "\n",
+    "        # processing\n",
+    "        wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
+    "        try:\n",
+    "            spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
+    "        except:\n",
+    "            print(\"skipping\", row)\n",
+    "            continue\n",
+    "        wall_detector.remove_bad_freqs(mag_thresh=mag_thresh, verbose=verbose, dryrun=False)\n",
+    "        wall_detector.merge_close_freqs(verbose=verbose)\n",
+    "        wall_detector.remove_spurious_freqs(verbose=verbose)\n",
+    "    \n",
+    "        df_mic = wall_detector.df[wall_detector.df.mic == mic]\n",
+    "        #stds = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(normalized_std).values\n",
+    "        stds = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanstd).values\n",
+    "        medians = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanmedian).values\n",
+    "        stds = np.r_[[np.zeros(len(medians))], [10*stds]]\n",
+    "        ax_slices[i, j].errorbar(x=np.sort(df_mic.frequency.unique()), \n",
+    "                          y=medians, \n",
+    "                          yerr=stds, \n",
+    "                          label=label, marker='o', markersize=4.0, lw=2.0)\n",
+    "        #sns.scatterplot(\n",
+    "        #    data=df_mic, x=\"frequency\", y=\"magnitude\", hue=\"counter\", ax=ax, linewidth=0\n",
+    "        #)\n",
+    "        ax_slices[i, j].grid(which=\"both\")\n",
+    "    title = appendix.replace(\"_\", \"\")\n",
+    "    ax_slices[i, 0].set_ylabel(title)\n",
+    "ax_slices[-1, 0].set_xlabel(\"frequency [Hz]\")\n",
+    "ax_slices[-1, 1].set_xlabel(\"frequency [Hz]\")\n",
+    "save_fig(fig_slice, f\"plots/{exp_name}_slice.png\")"
    ]
   },
   {
