--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -196,11 +196,46 @@
     "from simulation import get_dist_slice_pyroom, get_dist_slice_theory\n",
     "\n",
     "yaw_deg = 20\n",
-    "distances_cm = np.arange(20)\n",
+    "distances_cm = np.arange(10, 40)\n",
     "frequency = 1000\n",
     "\n",
     "Hs = get_dist_slice_pyroom(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg)\n",
     "Hs_theo = get_dist_slice_theory(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg)\n",
+    "fig, ax = plt.subplots()\n",
+    "for i in range(Hs.shape[1]):\n",
+    "    ax.semilogy(distances_cm, Hs[:, i], label=f\"mic{i}\", ls=\"-\", color=f\"C{i}\")\n",
+    "    ax.semilogy(distances_cm, Hs_theo[:, i], ls=\":\", color=f\"C{i}\")\n",
+    "ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find parameters based on distance slice.\n",
+    "from scipy.optimize import minimize, brute\n",
+    "\n",
+    "def fun(x): \n",
+    "    d_slice = get_dist_slice_theory(frequency, distances_cm=distances_cm,\n",
+    "                                 yaw_deg=yaw_deg, attenuation=x[0], wall_absorption=x[1])\n",
+    "    return np.linalg.norm(d_slice - Hs)\n",
+    "\n",
+    "sol = brute(fun, ranges=((0, 10), (0, 1)))\n",
+    "#sol = minimize(fun, x0=[20, 0.1, 0]).x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('attenuation (amplitude/m):', sol[0])\n",
+    "print('wall absorption (amplitude):', sol[1])\n",
+    "Hs_theo = get_dist_slice_theory(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg, \n",
+    "                                attenuation=sol[0], wall_absorption=sol[1])\n",
     "fig, ax = plt.subplots()\n",
     "for i in range(Hs.shape[1]):\n",
     "    ax.semilogy(distances_cm, Hs[:, i], label=f\"mic{i}\", ls=\"-\", color=f\"C{i}\")\n",
