Add simulation results

--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -121,6 +131,7 @@
     "        IntSlider,\n",
     "    )\n",
     "    import ipywidgets as widgets\n",
+    "    from plotting_tools import save_fig\n",
     "\n",
     "    def update_figure(slice_f, slice_d):\n",
     "        fig, axs = plt.subplots(1, 2)\n",
@@ -137,7 +148,7 @@
     "        axs[1].set_xlabel(\"frequency [Hz]\")\n",
     "        axs[1].set_ylim(ymin, ymax)\n",
     "        if saveas != \"\":\n",
-    "            fig.savefig(saveas, bbox_inches=\"tight\")\n",
+    "            save_fig(fig, saveas)\n",
     "        plt.show()\n",
     "\n",
     "    interactive_plot = interact(\n",
@@ -166,13 +177,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Distance-frequency matrix"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -188,6 +192,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Distance-frequency matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -196,15 +207,16 @@
     "from simulation import get_dist_slice_pyroom, get_dist_slice_theory\n",
     "\n",
     "yaw_deg = 20\n",
-    "distances_cm = np.arange(10, 40)\n",
+    "distances_cm = np.linspace(0, 40, 100)\n",
     "frequency = 1000\n",
     "\n",
     "Hs = get_dist_slice_pyroom(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg)\n",
     "Hs_theo = get_dist_slice_theory(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg)\n",
     "fig, ax = plt.subplots()\n",
     "for i in range(Hs.shape[1]):\n",
-    "    ax.semilogy(distances_cm, Hs[:, i], label=f\"mic{i}\", ls=\"-\", color=f\"C{i}\")\n",
-    "    ax.semilogy(distances_cm, Hs_theo[:, i], ls=\":\", color=f\"C{i}\")\n",
+    "    ax.plot(distances_cm, Hs[:, i], label=f\"mic{i}\", ls=\"-\", color=f\"C{i}\")\n",
+    "    ax.plot(distances_cm, Hs_theo[:, i], ls=\":\", color=f\"C{i}\")\n",
+    "ax.set_yscale('log')\n",
     "ax.legend()"
    ]
   },
@@ -217,30 +229,37 @@
     "# find parameters based on distance slice.\n",
     "from scipy.optimize import minimize, brute\n",
     "\n",
-    "def fun(x): \n",
-    "    d_slice = get_dist_slice_theory(frequency, distances_cm=distances_cm,\n",
-    "                                 yaw_deg=yaw_deg, attenuation=x[0], wall_absorption=x[1])\n",
-    "    return np.linalg.norm(d_slice - Hs)\n",
+    "def distance_slice_cost(coeffs, d_slice_exp_flat, mic_idx, ax=None):\n",
+    "    if mic_idx is None:\n",
+    "        chosen_mics = range(4)\n",
+    "    else:\n",
+    "        chosen_mics = [mic_idx]\n",
+    "        \n",
+    "    d_slice = get_dist_slice_theory(\n",
+    "        frequency,\n",
+    "        distances_cm=distances_cm,\n",
+    "        yaw_deg=yaw_deg,\n",
+    "        attenuation=coeffs[0],\n",
+    "        wall_absorption=coeffs[1],\n",
+    "        chosen_mics=chosen_mics,\n",
+    "    )\n",
+    "    d_slice_exp = d_slice_exp_flat.reshape((-1, 4))[:, chosen_mics]\n",
+    "    \n",
+    "    if ax is not None:\n",
+    "        for i, mic in enumerate(chosen_mics):\n",
+    "            ax.plot(distances_cm, Hs[:, i], label=f\"mic{mic}\", ls=\"-\", color=f\"C{mic}\")\n",
+    "            ax.plot(distances_cm, d_slice[:, i], ls=\":\", color=f\"C{mic}\")\n",
+    "        ax.legend()\n",
+    "    return np.linalg.norm(d_slice - d_slice_exp, ord=1)\n",
     "\n",
-    "sol = brute(fun, ranges=((0, 10), (0, 1)))\n",
-    "#sol = minimize(fun, x0=[20, 0.1, 0]).x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('attenuation (amplitude/m):', sol[0])\n",
-    "print('wall absorption (amplitude):', sol[1])\n",
-    "Hs_theo = get_dist_slice_theory(frequency, distances_cm=distances_cm, yaw_deg=yaw_deg, \n",
-    "                                attenuation=sol[0], wall_absorption=sol[1])\n",
-    "fig, ax = plt.subplots()\n",
-    "for i in range(Hs.shape[1]):\n",
-    "    ax.semilogy(distances_cm, Hs[:, i], label=f\"mic{i}\", ls=\"-\", color=f\"C{i}\")\n",
-    "    ax.semilogy(distances_cm, Hs_theo[:, i], ls=\":\", color=f\"C{i}\")\n",
-    "ax.legend()"
+    "mic_idx = 1 \n",
+    "for mic_idx in [0, None]:\n",
+    "    #sol = brute(fun, ((0, 2), (0, 1)), args=(Hs.flatten(), mic_idx))\n",
+    "    sol = minimize(distance_slice_cost, [1.0, 0.2], (Hs.flatten(), None)).x\n",
+    "    print(f\"attenuation [1/m]: {sol[0]:.4f}, absorption: {sol[1]:.4f}\")\n",
+    "    fig, ax = plt.subplots()\n",
+    "    distance_slice_cost(sol, Hs.flatten(), None, ax=ax)\n",
+    "    ax.set_title(f'optimization with mic: {mic_idx}')"
    ]
   },
   {
@@ -307,17 +326,13 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
-    "ax.pcolorfast(dist, freq, np.log10(df_matrix[freq_start:freq_end, dist_start:dist_end]))\n",
+    "ax.pcolorfast(dist, freq, df_matrix[freq_start:freq_end, dist_start:dist_end])\n",
     "plt.xlabel(\"distance [cm]\")\n",
     "plt.ylabel(\"frequency [Hz]\")\n",
-    "fname = \"plots/distance-frequency-matrix.pdf\"\n",
-    "fig.savefig(fname, bbox_inches=\"tight\")\n",
-    "fname = \"plots/distance-frequency-matrix-slice.pdf\"\n",
     "matrix_slices(\n",
     "    df_matrix[freq_start:freq_end, dist_start:dist_end],\n",
     "    freq,\n",
     "    dist,\n",
-    "    saveas=fname,\n",
     "    ymin=8,\n",
     "    ymax=20,\n",
     ")"
@@ -344,17 +359,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from plotting_tools import save_fig, add_colorbar\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
-    "ax.pcolorfast(\n",
-    "    dist, freq, np.log10(df_matrix_theo[freq_start:freq_end, dist_start:dist_end])\n",
+    "im = ax.pcolorfast(\n",
+    "    dist, freq, df_matrix_theo[freq_start:freq_end, dist_start:dist_end]\n",
     ")\n",
+    "add_colorbar(fig, ax, im)\n",
+    "save_fig(fig, \"plots/distance-frequency-matrix.pdf\")\n",
+    "ax.set_xlabel(\"distance [cm]\")\n",
+    "ax.set_ylabel(\"frequency [Hz]\")\n",
     "matrix_slices(\n",
     "    df_matrix_theo[freq_start:freq_end, dist_start:dist_end],\n",
     "    freq,\n",
     "    dist,\n",
-    "    ymin=0.0,\n",
-    "    ymax=3.0,\n",
+    "    saveas=\"plots/distance-frequency-slices.pdf\"\n",
     ")"
    ]
   },
@@ -476,8 +495,8 @@
     "\n",
     "    plt.figure()\n",
     "    plt.plot(d_sparse, p_fft_sparse, marker=\"o\", label=\"FFT\")\n",
-    "    plt.plot(distances_real, p_cost_sparse, marker=\"o\", label=\"optimization\")\n",
-    "    plt.axvline(delta / 2, color=\"black\", label=\"real distance\")\n",
+    "    plt.plot(distances_grid, p_cost_sparse, marker=\"o\", label=\"optimization\")\n",
+    "    plt.axvline(d, color=\"black\", label=\"real distance\")\n",
     "    plt.title(f\"{d}cm\")\n",
     "    plt.xlim(0, 70)\n",
     "    plt.ylim(1e-4, 1)\n",
@@ -504,10 +523,13 @@
     "relative_distances = np.random.normal(0, 1, len(freq_sparse))\n",
     "absolute_yaws = np.random.normal(0, 1, len(freq_sparse))\n",
     "\n",
-    "deltas = get_deltas_from_global(yaw_deg=nominal_yaw, distances_cm=distances, mic_idx=mic_idx)\n",
-    "nominal_delta = get_deltas_from_global(nominal_yaw, nominal_distance, mic_idx)\n",
-    "\n",
-    "deltas_noisy = get_deltas_from_global(nominal_yaw+absolute_yaws, \n",
+    "deltas, d0 = get_deltas_from_global(yaw_deg=nominal_yaw, \n",
+    "                                distances_cm=distances, \n",
+    "                                mic_idx=mic_idx)\n",
+    "nominal_delta, d0 = get_deltas_from_global(nominal_yaw, \n",
+    "                                       nominal_distance, \n",
+    "                                       mic_idx)\n",
+    "deltas_noisy, d0 = get_deltas_from_global(nominal_yaw+absolute_yaws, \n",
     "                                nominal_distance+relative_distances, \n",
     "                                mic_idx)\n",
     "\n",
@@ -543,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Noise study"
+    "# Geometry study"
    ]
   },
   {
@@ -599,6 +621,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Noise study\n",
+    "\n",
+    "All below depends on the nominal distance from the wall. We could make median performance vs. distance error and distance from wall plots, and repeat the same plot at different amplitude noises.\n",
+    "\n",
+    "Preliminary studies:\n",
+    "\n",
+    "- Find correct parameters for attenuation and wall loss, given our experimental data. Will be different from wall to wall! We can get different wall estimate from pyroomacoustics. \n",
+    "\n",
+    "Noise sensitivity plots:\n",
+    "\n",
+    "- Add noise on \"where\" we measure: We think we are at d, but actually measure at d+epsilon. Or we think we are at theta, but actually measure at theta+epsilon. Both lead to an error in path length, so we can add noise on the path length and then translate that noise to theta and/or distance errrors (on separate y labels)\n",
+    "\n",
+    "- Add noise on amplitudes. Check how high this is in practice for different settings (with/without motors, hovering or fixed, different windowing techniques, with/without interpolation, etc.)\n",
+    "\n",
+    "Separate plot: \n",
+    "\n",
+    "- Add noise on frequencies to make them non-uniform (but known)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from simulation import get_deltas_from_global\n",
+    "mic_idx = 3\n",
+    "frequencies = np.linspace(1000, 5000, 100)\n",
+    "distances_cm = np.arange(50, step=5)\n",
+    "yaw_deg = np.arange(-180, 180)\n",
+    "\n",
+    "sigmas_distance = np.arange(20)\n",
+    "sigmas_yaw = np.arange(-180, 180) \n",
+    "\n",
+    "fig, axs = plt.subplots(1, 2, sharey=True)\n",
+    "for d in distances_cm[::len(distances_cm)//10]:\n",
+    "    delta, d0 = get_deltas_from_global(0, d, mic_idx)\n",
+    "    delta_noisy, d0 = get_deltas_from_global(sigmas_yaw, d, mic_idx)\n",
+    "    sigmas_delta = 1e2 * abs(delta - delta_noisy)\n",
+    "    axs[0].plot(sigmas_yaw, sigmas_delta, label=f'{d}cm') \n",
+    "axs[0].set_xlabel('$\\\\sigma_\\\\theta$')\n",
+    "axs[0].set_ylabel('$\\\\sigma_\\\\Delta$')\n",
+    "axs[0].legend()\n",
+    "    \n",
+    "for yaw in yaw_deg[::len(yaw_deg)//10]:\n",
+    "    delta, d0 = get_deltas_from_global(yaw, 0, mic_idx)\n",
+    "    delta_noisy, d0 = get_deltas_from_global(yaw, sigmas_distance, mic_idx)\n",
+    "    sigmas_delta = 1e2 * abs(delta - delta_noisy)\n",
+    "    axs[1].plot(sigmas_distance, sigmas_delta, label=f'{yaw}deg') \n",
+    "axs[1].set_xlabel('$\\\\sigma_d$')\n",
+    "axs[1].legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pcolorfast_custom(ax, xs, ys, values, verbose=False, **kwargs):\n",
+    "    \"\"\" pcolorfast with gray for nan and centered xticks and yticks. \n",
+    "    \"\"\"\n",
+    "    import matplotlib\n",
+    "    current_cmap = matplotlib.cm.get_cmap()\n",
+    "    current_cmap.set_bad(color='gray')\n",
+    "    \n",
+    "    assert values.shape == (len(ys), len(xs))\n",
+    "    \n",
+    "    try:\n",
+    "        im = ax.pcolorfast(xs, ys, values, **kwargs)\n",
+    "        \n",
+    "        dx = (xs[1] - xs[0]) # assumes uniform samples \n",
+    "        dy = (ys[1] - ys[0])\n",
+    "        yticks = ys + dy/2 \n",
+    "        xticks = xs + dx/2\n",
+    "        ax.set_xticks(xticks)\n",
+    "        ax.set_xticklabels(xs)\n",
+    "        ax.set_yticks(yticks)\n",
+    "        ax.set_yticklabels(ys)\n",
+    "        extent = [xs[0], xs[-1]+dx, ys[0], ys[-1]+dy]\n",
+    "        im.set_extent(extent)\n",
+    "        \n",
+    "    except:\n",
+    "        print('Warning: problem with dimensions in pcolorfast (bug by matplotlib)')\n",
+    "        im = ax.pcolorfast(xs, ys, values[:-1, :-1], **kwargs)\n",
+    "\n",
+    "    \n",
+    "    return im\n",
+    "\n",
+    "def plot_error(sub_df, column, name, log=False, aggfunc=np.nanmedian, vmin=None, vmax=None):\n",
+    "    table = pd.pivot_table(sub_df, values='error', index=['method', column], columns='distance', \n",
+    "                           aggfunc=aggfunc)\n",
+    "    if vmin is None:\n",
+    "        vmin = np.min(table.values[table.values > 0])\n",
+    "    if vmax is None:\n",
+    "        vmax = np.max(table.values[table.values > 0])\n",
+    "        \n",
+    "    fig, axs = plt.subplots(1, len(sub_df.method.unique()), sharey=True)\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    for i, (method, df) in enumerate(table.groupby('method')):\n",
+    "        index = df.index.get_level_values(column).values\n",
+    "        distances = df.columns.values\n",
+    "        if log: \n",
+    "            im = pcolorfast_custom(axs[i], distances, index, np.log10(df.values), vmin=np.log10(vmin), vmax=np.log10(vmax))\n",
+    "        else:\n",
+    "            im = pcolorfast_custom(axs[i], distances, index, df.values, vmin=vmin, vmax=vmax)\n",
+    "        axs[i].set_xlabel('distance [cm]')\n",
+    "        axs[i].set_title(f'{method}')\n",
+    "    add_colorbar(fig, axs[i], im)\n",
+    "    axs[0].set_ylabel(name.replace('_', ' '))\n",
+    "    return fig, axs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas_utils import filter_by_dict\n",
+    "    \n",
+    "name = 'amplitude_noise'\n",
+    "results_df = pd.read_pickle(f'results/simulation/{name}.pkl')\n",
+    "fig, axs = plot_error(results_df, column='sigmay', name=name, aggfunc=np.nanmedian)\n",
+    "save_fig(fig, f'plots/simulation/{name}_median.pdf')\n",
+    "fig, axs = plot_error(results_df, column='sigmay', name=name, aggfunc=np.nanstd)\n",
+    "save_fig(fig, f'plots/simulation/{name}_std.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'delta_noise'\n",
+    "results_df = pd.read_pickle(f'results/simulation/{name}.pkl')\n",
+    "fig, axs = plot_error(results_df, column='sigmadelta', name=name, aggfunc=np.nanmedian)\n",
+    "save_fig(fig, f'plots/simulation/{name}_median.pdf')\n",
+    "fig, axs = plot_error(results_df, column='sigmadelta', name=name, aggfunc=np.nanstd)\n",
+    "save_fig(fig, f'plots/simulation/{name}_std.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "name = 'frequency_noise'\n",
+    "results_df = pd.read_pickle(f'results/simulation/{name}.pkl')\n",
+    "fig, axs = plot_error(results_df, column='sigmaf', name=name, aggfunc=np.nanmedian)\n",
+    "save_fig(fig, f'plots/simulation/{name}_median.pdf')\n",
+    "fig, axs = plot_error(results_df, column='sigmaf', name=name, aggfunc=np.nanstd)\n",
+    "save_fig(fig, f'plots/simulation/{name}_std.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'joint_noise'\n",
+    "results_df = pd.read_pickle(f'results/simulation/{name}.pkl')\n",
+    "\n",
+    "chosen_sigmas = results_df.sigmay.unique()\n",
+    "chosen_sigmas = chosen_sigmas[::len(chosen_sigmas)//3]\n",
+    "\n",
+    "for sigma_y in chosen_sigmas:\n",
+    "    print('plotting', sigma_y)\n",
+    "    sub_df = filter_by_dict(results_df, {'sigmay':sigma_y})\n",
+    "    #fig, axs = plot_error(sub_df, column='sigmadelta', name='delta noise', aggfunc=np.nanstd)\n",
+    "    #fig.suptitle(f'amplitude noise: {sigma_y}')\n",
+    "    fig, axs = plot_error(sub_df, column='sigmadelta', name='delta noise', aggfunc=np.nanmedian, \n",
+    "                          vmax=40)\n",
+    "    fig.suptitle(f'amplitude noise: {sigma_y}', fontsize=14, y=0.95)\n",
+    "    save_fig(fig, f'plots/simulation/{name}_{sigma_y}_median.pdf')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -632,7 +840,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
