Replace depcrecated filter_by_dicts

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -167,7 +167,7 @@
     "from bin_selection import generate_sweep\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "from dataset_parameters import kwargs_datasets\n",
-    "from pandas_utils import filter_by_dicts\n",
+    "from pandas_utils import filter_by_dict\n",
     "from plotting_tools import *\n",
     "import seaborn as sns\n",
     "from wall_detector import WallDetector, normalized_std\n",
@@ -192,7 +192,7 @@
     "        \"degree\": degree, \n",
     "    }\n",
     "\n",
-    "df_filtered = filter_by_dicts(df_all, [chosen_dict])\n",
+    "df_filtered = filter_by_dict(df_all, chosen_dict)\n",
     "print(\"plotting\\n\", df_filtered.iloc[:, :8])\n",
     "\n",
     "filter_by_motors = filter_by_mic_type = filter_by_appendix = False\n",
@@ -278,7 +278,7 @@
    "source": [
     "#chosen_dict[\"motors\"] = \"all45000\"\n",
     "chosen_dict[\"mic_type\"] = \"audio_deck\"\n",
-    "df_filtered = filter_by_dicts(df_all, [chosen_dict])\n",
+    "df_filtered = filter_by_dict(df_all, chosen_dict)\n",
     "\n",
     "if mic_type == \"measurement\":\n",
     "    mic = 0\n",
@@ -403,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pandas_utils import filter_by_dicts\n",
+    "from pandas_utils import filter_by_dict\n",
     "\n",
     "#exp_name = \"2021_02_23_wall\"\n",
     "exp_name = \"2021_02_25_wall\"\n",
@@ -417,7 +417,7 @@
     "\n",
     "filter_dict = dict(exp_name=exp_name, motors=motors, mic_type=mic_type)\n",
     "\n",
-    "df = filter_by_dicts(results_df, [filter_dict])\n",
+    "df = filter_by_dict(results_df, filter_dict)\n",
     "assert len(df) == 1\n",
     "row = df.iloc[0]\n",
     "row"
