--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"></ul></div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -835,12 +825,12 @@
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": true,
+   "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
