--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -57,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "from pandas_utils import filter_by_dicts\n",
+    "from pandas_utils import filter_by_dict\n",
     "from wall_detector import WallDetector\n",
     "from frequency_analysis import plot_spectrogram\n",
     "import progressbar\n",
@@ -75,13 +75,13 @@
     "    }\n",
     "}\n",
     "\n",
-    "dict_chosen = [{\n",
+    "dict_chosen = {\n",
     "    'motors': 0,\n",
     "    'snr': 1,\n",
-    "}]\n",
+    "}\n",
     "n_spurious = 1 #None\n",
     "\n",
-    "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
+    "df_chosen = filter_by_dict(df_total, dict_chosen)\n",
     "\n",
     "for source, df_source in df_chosen.groupby('source'):\n",
     "    params = params_dict.get(source)\n",
@@ -114,17 +114,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_chosen = [{\n",
+    "dict_chosen = {\n",
     "    'motors': 0,\n",
     "    'snr': 1,\n",
-    "}]\n",
+    "}\n",
     "#chosen experiments for calibration\n",
     "#chosen_experiments = ['_HALL', '_HALL2', '_HALL3']\n",
     "chosen_experiments = ['_HALL', '_HALL2']\n",
     "method = np.median\n",
     "n_spurious = None # use 0.7 quantile\n",
     "\n",
-    "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
+    "df_chosen = filter_by_dict(df_total, dict_chosen)\n",
     "df_calib = pd.DataFrame(index=[], \n",
     "                        columns=['frequencies', 'psd', 'psd_std', \n",
     "                                 'source', 'method'])\n",
