Add interpolation options for peak estimation and clean up

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -191,7 +191,8 @@
     "    chosen_dict = {\n",
     "        \"degree\": degree, \n",
     "    }\n",
-    "\n",
+    "chosen_dict['mic_type'] = 'audio_deck'\n",
+    "chosen_dict['appendix'] = '_window3'\n",
     "df_filtered = filter_by_dict(df_all, chosen_dict)\n",
     "print(\"plotting\\n\", df_filtered.iloc[:, :8])\n",
     "\n",
@@ -276,10 +277,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "from frequency_analysis import interpolate_peak, fit\n",
+    "\n",
+    "t_idx = 300 \n",
+    "mic_idx = 0\n",
+    "spec_slice = spec_masked_all[:, mic_idx, t_idx]\n",
+    "\n",
+    "# use full slice\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "ax.plot(freqs_masked, np.abs(spec_slice))\n",
+    "max_val, max_freq = interpolate_peak(spec_slice, freqs_masked, ax=ax)\n",
+    "ax.axvline(max_freq, color='C2')\n",
+    "ax.set_xlim(max_freq-500, max_freq+500)\n",
+    "\n",
+    "# use slice around max\n",
+    "bin_max = np.argmax(np.abs(spec_slice))\n",
+    "n_points = 2\n",
+    "range_max = range(bin_max-n_points, bin_max+n_points)\n",
+    "spec_smaller = spec_slice[range_max]\n",
+    "freq_smaller = freqs_masked[range_max]\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "ax.plot(freqs_masked, np.abs(spec_slice))\n",
+    "max_val, max_freq = interpolate_peak(spec_smaller, freq_smaller, pad_factor=2, ax=ax)\n",
+    "ax.axvline(max_freq, color='C2')\n",
+    "ax.set_xlim(max_freq-500, max_freq+500)\n",
+    "    \n",
+    "n_times = 100\n",
+    "times = []\n",
+    "for i in range(n_times):\n",
+    "    t0 = time.time()\n",
+    "    max_val, max_freq = interpolate_peak(spec_slice, freqs_masked)\n",
+    "    times.append(time.time() - t0)\n",
+    "print(f'average time: {np.mean(times)}s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#chosen_dict[\"motors\"] = \"all45000\"\n",
     "chosen_dict[\"mic_type\"] = \"audio_deck\"\n",
     "df_filtered = filter_by_dict(df_all, chosen_dict)\n",
     "\n",
+    "interpolate = True\n",
     "if mic_type == \"measurement\":\n",
     "    mic = 0\n",
     "else:\n",
@@ -299,10 +345,11 @@
     "        label += f\"{row.motors}\"\n",
     "\n",
     "        # processing\n",
-    "        wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
+    "        wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type, interpolate=interpolate)\n",
     "        try:\n",
-    "            spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
+    "            spec_masked_all, freqs_masked = wall_detector.fill_from_row(row, verbose=True)\n",
     "        except:\n",
+    "            raise\n",
     "            print(\"skipping\", row)\n",
     "            continue\n",
     "        wall_detector.remove_bad_freqs(mag_thresh=mag_thresh, verbose=verbose, dryrun=False)\n",
@@ -326,7 +373,7 @@
     "    ax_slices[i, 0].set_ylabel(title)\n",
     "ax_slices[-1, 0].set_xlabel(\"frequency [Hz]\")\n",
     "ax_slices[-1, 1].set_xlabel(\"frequency [Hz]\")\n",
-    "save_fig(fig_slice, f\"plots/{exp_name}_slice.png\")"
+    "save_fig(fig_slice, f\"plots/{exp_name}_slice_interpolate{interpolate}.png\")"
    ]
   },
   {
@@ -403,7 +450,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pandas_utils import filter_by_dict\n",
+    "from pandas_utils import filter_by_dicts\n",
     "\n",
     "#exp_name = \"2021_02_23_wall\"\n",
     "exp_name = \"2021_02_25_wall\"\n",
@@ -417,7 +464,7 @@
     "\n",
     "filter_dict = dict(exp_name=exp_name, motors=motors, mic_type=mic_type)\n",
     "\n",
-    "df = filter_by_dict(results_df, filter_dict)\n",
+    "df = filter_by_dicts(results_df, [filter_dict])\n",
     "assert len(df) == 1\n",
     "row = df.iloc[0]\n",
     "row"
