--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -181,18 +181,15 @@
     "\n",
     "if len(df_all.distance.unique()) > 1:\n",
     "    distance = 20\n",
-    "    chosen_dict = {\n",
-    "        \"degree\": degree, \n",
-    "        \"distance\": distance, \n",
-    "    }\n",
     "else:\n",
     "    distance = df_all.iloc[0].distance\n",
     "    print('using unique distance', distance)\n",
-    "    chosen_dict = {\n",
-    "        \"degree\": degree, \n",
-    "    }\n",
-    "chosen_dict['mic_type'] = 'audio_deck'\n",
-    "chosen_dict['appendix'] = '_window3'\n",
+    "chosen_dict = {\n",
+    "    \"degree\": degree, \n",
+    "    \"distance\": distance, \n",
+    "    \"mic_type\": \"audio_deck\",\n",
+    "    #\"appendix\": \"_window3\"\n",
+    "}\n",
     "df_filtered = filter_by_dict(df_all, chosen_dict)\n",
     "print(\"plotting\\n\", df_filtered.iloc[:, :8])\n",
     "\n",
@@ -223,29 +220,23 @@
     "            label += f\"{row.appendix.replace('_', ' ')} \"\n",
     "        label += f\"mic{mic}\"\n",
     "\n",
-    "        # processing\n",
-    "        wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
-    "        try:\n",
-    "            spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
-    "        except:\n",
-    "            print(\"skipping\", row)\n",
-    "            continue\n",
-    "        wall_detector.remove_bad_freqs(mag_thresh=mag_thresh, verbose=verbose, dryrun=False)\n",
-    "        wall_detector.merge_close_freqs(verbose=verbose)\n",
-    "        wall_detector.remove_spurious_freqs(verbose=verbose)\n",
+    "        wall_detector = WallDetector.init_from_row(exp_name, row)\n",
     "\n",
+    "        spec_all = wall_detector.current_spectrogram\n",
+    "        freqs = wall_detector.current_freqs\n",
+    "        \n",
     "        # plotting\n",
-    "        index_matrix = get_index_matrix(spec_masked_all)\n",
-    "        spec_masked = np.mean(spec_masked_all, axis=1)\n",
+    "        index_matrix = get_index_matrix(spec_all)\n",
+    "        spec = np.mean(spec_all, axis=1)\n",
     "        \n",
     "        fig, ax = plt.subplots()\n",
     "        fig.set_size_inches(5, 5)\n",
-    "        log_spec_masked = np.full(spec_masked.shape, np.nan)\n",
-    "        log_spec_masked[spec_masked>0] = np.log10(spec_masked[spec_masked>0])\n",
-    "        im = ax.pcolorfast(row.seconds, freqs_masked, log_spec_masked[:-1, :-1])\n",
+    "        log_spec = np.full(spec.shape, np.nan)\n",
+    "        log_spec[spec>0] = np.log10(spec[spec>0])\n",
+    "        im = ax.pcolorfast(row.seconds, freqs, log_spec[:-1, :-1])\n",
     "        add_colorbar(fig, ax, im)\n",
     "        ax.scatter(row.seconds[1:], \n",
-    "                   freqs_masked[index_matrix[0, :]][:-1], \n",
+    "                   freqs[index_matrix[0, :]][:-1], \n",
     "                   color='C1', ls=':', label='highest frequency', s=5)\n",
     "        ax.legend()\n",
     "        ax.set_xlim(\n",
@@ -263,12 +254,21 @@
     "        #    fig, f\"plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_spec.png\"\n",
     "        #)\n",
     "\n",
-    "        fig_raw, ax = plot_raw_signals(spec_masked_all, freqs_masked, mic_idx=mic)\n",
+    "        fig_raw, ax = plot_raw_signals(spec_all, freqs, mic_idx=mic)\n",
     "        ax.set_ylim(ymin, ymax)\n",
     "        ax.set_title(label)\n",
     "        save_fig(\n",
     "            fig_raw, f\"plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_raw.png\"\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## interpolation study\n",
+    "\n",
+    "current status: interpolation is not helping much because we need to consider the wider shape of the peak (due to windowing) in the pipeline somewhere. The fit_peak function might be a better solution but it is also not quite working yet. "
    ]
   },
   {
@@ -278,17 +278,36 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "from frequency_analysis import interpolate_peak, fit\n",
+    "from frequency_analysis import interpolate_peak, fit_peak\n",
+    "\n",
+    "chosen_dict = {\n",
+    "    \"degree\": degree, \n",
+    "    \"distance\": distance, \n",
+    "    \"mic_type\": \"audio_deck\",\n",
+    "    \"appendix\":\"_window3\",\n",
+    "    \"motors\":\"all45000\"\n",
+    "}\n",
+    "df_filtered = filter_by_dict(df_all, chosen_dict)\n",
+    "assert len(df_filtered) == 1\n",
+    "row = df_filtered.iloc[0]\n",
+    "wall_detector = WallDetector.init_from_row(exp_name, row)\n",
+    "\n",
+    "spec = wall_detector.current_spectrogram\n",
+    "freqs = wall_detector.current_freqs\n",
     "\n",
     "t_idx = 300 \n",
     "mic_idx = 0\n",
-    "spec_slice = spec_masked_all[:, mic_idx, t_idx]\n",
+    "spec_slice = spec[:, mic_idx, t_idx]\n",
+    "\n",
+    "max_without = np.max(np.abs(spec_slice))\n",
+    "print(f'magniutde estimate without fitting: {max_without:.2f}')\n",
     "\n",
     "# use full slice\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
-    "ax.plot(freqs_masked, np.abs(spec_slice))\n",
-    "max_val, max_freq = interpolate_peak(spec_slice, freqs_masked, ax=ax)\n",
+    "ax.plot(freqs, np.abs(spec_slice))\n",
+    "max_val, max_freq = interpolate_peak(spec_slice, freqs, ax=ax)\n",
+    "print(f'magniutde estimate with interpolation with all points: {max_val:.2f}')\n",
     "ax.axvline(max_freq, color='C2')\n",
     "ax.set_xlim(max_freq-500, max_freq+500)\n",
     "\n",
@@ -297,20 +316,24 @@
     "n_points = 2\n",
     "range_max = range(bin_max-n_points, bin_max+n_points)\n",
     "spec_smaller = spec_slice[range_max]\n",
-    "freq_smaller = freqs_masked[range_max]\n",
+    "freq_smaller = freqs[range_max]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
-    "ax.plot(freqs_masked, np.abs(spec_slice))\n",
-    "max_val, max_freq = interpolate_peak(spec_smaller, freq_smaller, pad_factor=2, ax=ax)\n",
-    "ax.axvline(max_freq, color='C2')\n",
-    "ax.set_xlim(max_freq-500, max_freq+500)\n",
+    "ax.plot(freqs, np.abs(spec_slice))\n",
+    "max_val_smaller, max_freq_smaller = interpolate_peak(spec_smaller, freq_smaller, pad_factor=2, ax=ax)\n",
+    "print(f'magniutde estimate with interpolation with {n_points} points: {max_val_smaller:.2f}')\n",
+    "ax.axvline(max_freq_smaller, color='C2')\n",
+    "ax.set_xlim(max_freq_smaller-500, max_freq_smaller+500)\n",
+    "\n",
+    "max_peak, p = fit_peak(spec_slice)\n",
+    "print(f'magniutde estimate with peak fitting: {max_peak:.2f}')\n",
     "    \n",
     "n_times = 100\n",
     "times = []\n",
     "for i in range(n_times):\n",
     "    t0 = time.time()\n",
-    "    max_val, max_freq = interpolate_peak(spec_slice, freqs_masked)\n",
+    "    max_val, max_freq = interpolate_peak(spec_slice, freqs)\n",
     "    times.append(time.time() - t0)\n",
     "print(f'average time: {np.mean(times)}s')"
    ]
@@ -321,59 +344,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#chosen_dict[\"motors\"] = \"all45000\"\n",
-    "chosen_dict[\"mic_type\"] = \"audio_deck\"\n",
+    "chosen_dict = {\n",
+    "    \"degree\": degree,\n",
+    "    \"distance\": distance,\n",
+    "    \"mic_type\": \"audio_deck\",\n",
+    "}\n",
     "df_filtered = filter_by_dict(df_all, chosen_dict)\n",
     "\n",
-    "interpolate = True\n",
     "if mic_type == \"measurement\":\n",
     "    mic = 0\n",
     "else:\n",
     "    mic = 1\n",
     "\n",
-    "fig_slice, ax_slices = plt.subplots(len(df_filtered.appendix.unique()), 2, sharex=True, sharey=True)\n",
-    "fig_slice.set_size_inches(10, 10)\n",
+    "n_rows = len(df_filtered.appendix.unique())\n",
+    "print(n_rows)\n",
+    "fig_slice, ax_slices = plt.subplots(n_rows, 2, sharex=True, sharey=True, squeeze=False)\n",
+    "fig_slice.set_size_inches(10, 5 * n_rows)\n",
     "\n",
     "for i, (appendix, df) in enumerate(df_filtered.groupby(\"appendix\", sort=True)):\n",
-    "    for j, (motors, df_row) in enumerate(df.groupby(\"motors\", sort=True)): \n",
+    "    for j, (motors, df_row) in enumerate(df.groupby(\"motors\", sort=True)):\n",
     "        assert len(df_row) == 1, df_row.iloc[:, :10]\n",
     "        row = df_row.iloc[0]\n",
     "        if i == 0:\n",
     "            ax_slices[0, j].set_title(motors)\n",
     "\n",
-    "        label = title = \"\"\n",
-    "        label += f\"{row.motors}\"\n",
+    "        t0 = time.time()\n",
+    "        wall_detector = WallDetector.init_from_row(exp_name, row, interpolation='')\n",
+    "        t1 = time.time()\n",
+    "        wall_detector_lagrange = WallDetector.init_from_row(exp_name, row, interpolation='lagrange')\n",
+    "        t2 = time.time()\n",
+    "        wall_detector_quadratic = WallDetector.init_from_row(exp_name, row, interpolation='quadratic')\n",
+    "        t3 = time.time()\n",
+    "        print(f'times with interpolation:\\n none:{t1-t0:.2e}s \\n zero-pad:{t2-t1:.2e}s \\n quadratic:{t3-t2:.2e}')\n",
     "\n",
-    "        # processing\n",
-    "        wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type, interpolate=interpolate)\n",
-    "        try:\n",
-    "            spec_masked_all, freqs_masked = wall_detector.fill_from_row(row, verbose=True)\n",
-    "        except:\n",
-    "            raise\n",
-    "            print(\"skipping\", row)\n",
-    "            continue\n",
-    "        wall_detector.remove_bad_freqs(mag_thresh=mag_thresh, verbose=verbose, dryrun=False)\n",
-    "        wall_detector.merge_close_freqs(verbose=verbose)\n",
-    "        wall_detector.remove_spurious_freqs(verbose=verbose)\n",
-    "    \n",
-    "        df_mic = wall_detector.df[wall_detector.df.mic == mic]\n",
-    "        #stds = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(normalized_std).values\n",
-    "        stds = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanstd).values\n",
-    "        medians = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanmedian).values\n",
-    "        stds = np.r_[[np.zeros(len(medians))], [10*stds]]\n",
-    "        ax_slices[i, j].errorbar(x=np.sort(df_mic.frequency.unique()), \n",
-    "                          y=medians, \n",
-    "                          yerr=stds, \n",
-    "                          label=label, marker='o', markersize=4.0, lw=2.0)\n",
-    "        #sns.scatterplot(\n",
-    "        #    data=df_mic, x=\"frequency\", y=\"magnitude\", hue=\"counter\", ax=ax, linewidth=0\n",
-    "        #)\n",
+    "        for idx, wd in enumerate([wall_detector, wall_detector_lagrange, wall_detector_quadratic]):\n",
+    "            df_mic = wd.df[wd.df.mic == mic]\n",
+    "            label = f\"interpolation {wd.interpolation}\"\n",
+    "            stds = (\n",
+    "                df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanstd).values\n",
+    "            )\n",
+    "            medians = (\n",
+    "                df_mic.groupby(\"frequency\", sort=True)\n",
+    "                .magnitude.apply(np.nanmedian)\n",
+    "                .values\n",
+    "            )\n",
+    "            xs = np.sort(df_mic.frequency.unique())\n",
+    "            ax_slices[i, j].plot(xs, stds, label=label)\n",
+    "            \n",
+    "            #stds = np.r_[[np.zeros(len(medians))], [10 * stds]]\n",
+    "            #dx_mean = np.mean(xs[:-1]-xs[1:])\n",
+    "            #ax_slices[i, j].errorbar(\n",
+    "            #    x=xs+idx*dx_mean/5,\n",
+    "            #    y=medians,\n",
+    "            #    yerr=stds,\n",
+    "            #    label=label,\n",
+    "            #    marker=\"o\",\n",
+    "            #    markersize=4.0,\n",
+    "            #    lw=2.0,\n",
+    "            #    alpha=1-idx*0.3\n",
+    "            #)\n",
     "        ax_slices[i, j].grid(which=\"both\")\n",
+    "        # sns.scatterplot(\n",
+    "        #    data=df_mic, x=\"frequency\", y=\"magnitude\", hue=\"counter\", ax=ax, linewidth=0\n",
+    "        # )\n",
+    "        ax_slices[i, j].set_yscale('log')\n",
+    "    ax_slices[i, -1].legend(loc='upper right')\n",
     "    title = appendix.replace(\"_\", \"\")\n",
     "    ax_slices[i, 0].set_ylabel(title)\n",
     "ax_slices[-1, 0].set_xlabel(\"frequency [Hz]\")\n",
     "ax_slices[-1, 1].set_xlabel(\"frequency [Hz]\")\n",
-    "save_fig(fig_slice, f\"plots/{exp_name}_slice_interpolate{interpolate}.png\")"
+    "save_fig(fig_slice, f\"plots/{exp_name}_slice.png\")"
    ]
   },
   {
